Fix icons not centered

--- a/src/app/wrapper/cta/cta.component.scss
+++ b/src/app/wrapper/cta/cta.component.scss
@@ -12,6 +12,10 @@
     .container-column {
       display: flex;
       flex-direction: column;
+
+      .devicon::before {
+        margin: 50%;
+      }
     }
     .large {
       position: relative;
